--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1140,18 +1140,12 @@ a {
 }
 @media (min-width: 992px) {
   .cid-t8Olvo3Z8G .item-wrapper .item-content {
-    padding: 2rem 2rem 0;
-  }
-  .cid-t8Olvo3Z8G .item-wrapper .item-footer {
-    padding: 0 2rem 2rem;
+    padding: 2rem;
   }
 }
 @media (max-width: 991px) {
   .cid-t8Olvo3Z8G .item-wrapper .item-content {
-    padding: 1rem 1rem 0;
-  }
-  .cid-t8Olvo3Z8G .item-wrapper .item-footer {
-    padding: 0 1rem 1rem;
+    padding: 1rem;
   }
 }
 .cid-t8Olvo3Z8G .mbr-section-btn {
@@ -1400,6 +1394,90 @@ a {
 }
 .cid-tbKrqFgAK6 .card-title,
 .cid-tbKrqFgAK6 .social-row {
+  color: #000000;
+}
+.cid-tcduQOjN5Y {
+  padding-top: 0rem;
+  padding-bottom: 6rem;
+  background-image: url("../../../assets/images/mbr-1920x1017.jpg");
+}
+.cid-tcduQOjN5Y .mbr-fallback-image.disabled {
+  display: none;
+}
+.cid-tcduQOjN5Y .mbr-fallback-image {
+  display: block;
+  background-size: cover;
+  background-position: center center;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+}
+.cid-tcduQOjN5Y .team-card {
+  margin-bottom: 2rem;
+  transition: all 0.3s;
+}
+.cid-tcduQOjN5Y .team-card:hover {
+  transform: translateY(-10px);
+}
+.cid-tcduQOjN5Y .card-wrap {
+  background: #ffffff;
+  border-radius: 4px;
+}
+@media (max-width: 991px) {
+  .cid-tcduQOjN5Y .card-wrap {
+    margin-bottom: 2rem;
+  }
+}
+.cid-tcduQOjN5Y .card-wrap .image-wrap img {
+  width: 100%;
+}
+@media (min-width: 768px) {
+  .cid-tcduQOjN5Y .card-wrap .content-wrap {
+    padding: 2rem;
+  }
+}
+@media (max-width: 767px) {
+  .cid-tcduQOjN5Y .card-wrap .content-wrap {
+    padding: 1rem;
+  }
+}
+.cid-tcduQOjN5Y .social-row {
+  text-align: center;
+}
+.cid-tcduQOjN5Y .social-row .soc-item {
+  display: inline-block;
+  text-align: center;
+  border-radius: 50%;
+  margin-right: 0.6rem;
+  margin-bottom: 1rem;
+  padding: 0.5rem;
+  border: 2px solid #6592e6;
+  transition: all 0.3s;
+}
+.cid-tcduQOjN5Y .social-row .soc-item .mbr-iconfont {
+  transition: all 0.3s;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  color: #6592e6;
+  font-size: 1.5rem;
+}
+.cid-tcduQOjN5Y .social-row .soc-item:hover {
+  background-color: #6592e6;
+}
+.cid-tcduQOjN5Y .social-row .soc-item:hover .mbr-iconfont {
+  color: #ffffff;
+}
+.cid-tcduQOjN5Y .mbr-role,
+.cid-tcduQOjN5Y .social-row {
+  text-align: center;
+}
+.cid-tcduQOjN5Y .mbr-section-title {
+  color: #ffffff;
+}
+.cid-tcduQOjN5Y .card-title,
+.cid-tcduQOjN5Y .social-row {
   color: #000000;
 }
 .cid-tbM3pSsKwQ {
